--- a/vsl-rl.html
+++ b/vsl-rl.html
@@ -455,7 +455,7 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
         <section class="section-testimonials ">
             <div class="container">
                 <h2 class="section-testimonials__title">You’re not alone, by the way. When it comes to talking about who you are, what you want, and what you need, <span class="highlight-underline">many women struggle.</span></h2>
-                <p>The good news? Learning to communicate that in a way that shows him the high value Woman you are is a SIMPLE fix.</p>
+                <p>The good news? Learning to communicate that in a way that shows him the high value Woman you are is a SIMPLE fix. And once you have these sample scripts, you'll learn how to be vulnerable without risking rejections. <strong> You'll learn how to be honest about your exoectations without making him feel burdened. You'll learn how to represent yourself and get the credit you deserve for being AMAZING woman that he knows is irreplaceable.</stong></p>
                 <p>He’ll start responding to you in a whole new way. He’ll understand your value see you as different from every other woman, and want to spend more time with YOU (and only you).</p>
             </div>
         </section>
