--- a/vsl-rl.html
+++ b/vsl-rl.html
@@ -784,10 +784,39 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                             </div>
         </section>
 
+        <section class="section-testimonials" id="testimonials-backup2">
+            <div class="container"> 
+                <div class="row">
+                    <div class="col-md-6 mb-5 mb-md-0">
+                        <div class="section-testimonials__item section-testimonials__item--left">
+                            <strong>Real-Life Texts From Guys and Your Perfect Response, Every Time</strong>
+                            <blockquote class="section-testimonials__quote">
+                                <p>In this 80 minute webinar, I walk through 7 different text exchanges.</p>
+                                <p>I analyze the responses from both sides of the exchange and provide word-for-word replies that the women could have sent instead.</p>
+                                <p>If you want to know what a guy means when he texts something like this, then you’re in for a treat!</p>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="section-testimonials__item section-testimonials__item--right">
+                            <strong>7 Magic Messages That Get Any Guy to Respond to Your Charms</strong>
+                            <blockquote class="section-testimonials__quote">
+                                <p>A clear breakdown of the best kind of first text to send when you meet a new guy to inflame curiosity, stoke desire, and have guys checking their phone every 5 minutes to see when you’re going to text them next.</p>
+                                <p>This isn’t about you doing all the work at the beginning of a relationship — just the opposite! Learn how to leverage your first texts to have <em>him pursuing you!</em></p>
+                                <p></p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
         <section class="section-content section-content--sales">
             <div class="container">
                 <h2 class="section-content__title">For Less Than the Price of a Night Out, You Get…</h2>
-                <p class="hero__bonus5">59 customizable scripts for ever stage of dating and relationships PLUS:</p>
+                <p class="hero__bonus5"><span class="sale-font">59 customizable scripts</span> for ever stage of dating and relationships PLUS:</p>
                 <div class="row justify-content-lg-center">
                     <div class="col-md-6">
                         <dl class="section-content__desc-list">
@@ -830,7 +859,7 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                             </dd>
                             <dt><span>8.</span> BONUS: Deep Dive Communication Coaching – An Exclusive Q&A Webinar With Me</dt>
                             <dd><p>Access to an exclusive call where I answer your most burning questions about men and communication. We talk about:</p>
-                                <ul>
+                                <ul class="bonus-align">
                                     <li>Speed dating and how to make a great first impression</li>
                                     <li><strong>Conversational “hacks”</strong> to deal with small talk</li>
                                     <li>How to use the advice from <i>How to Talk to Men</i> in a <strong>long-distance relationship</strong></li>
