--- a/vsl-rl.html
+++ b/vsl-rl.html
@@ -159,9 +159,9 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                         <input type="hidden" name="utm_adgroup" value="" /><input type="hidden" name="utm_adid" value="" /><input type="hidden" name="utm_campaign" value="" /><input type="hidden" name="utm_content" value="" /><input type="hidden" name="utm_source" value="" /><input type="hidden" name="utm_medium" value="" /><input type="hidden" name="utm_term" value="" /><input type="hidden" name="gclid" value="" /><input type="hidden" name="referrer" value="" /><input type="hidden" name="exp_cookie" id="exp_cookie" value="fb72fd9c-781e-4ecd-b7bc-0d8d318187d8" /><input type="hidden" id="_wpnonce" name="_wpnonce" value="72229a16f5" />                    </form>
                                         <p class="hero__bonus">Including, for a limited time, 10 amazing bonuses:</p>
                                         <ul class="form-list">
-                                            <li class="list-item-1"><span>Real-Life Texts From Guys and Your Perfect Response, Every Time</span> In this 80 minute webinar, I walk through 7 different text exchanges, analyze the responses from both sides of the exchange, and provide word-for-word replies that the women could have sent instead.</li>
-                                            <li class="list-item-2"><span>7 Magic Messages That Get Any Guy to Respond to Your Charms</span> Examples of the best kind of first text to send when you meet a new guy to inflame curiosity, stoke desire, and have guys checking their phone every 5 minutes to see when you’re going to text them next.</li>
-                                            <li class="list-item-3"><span>PLUS 8 more amazing bonuses</span>, from scripts to in depth explanations of the male psychology behind his most frustrating texts</li>
+                                            <li class="list-item-1"><span>Real-Life Texts From Guys and Your Perfect Response, Every Time</span></li><p>In this 80 minute webinar, I walk through 7 different text exchanges, analyze the responses from both sides of the exchange, and provide word-for-word replies that the women could have sent instead.</p>
+                                            <li class="list-item-2"><span>7 Magic Messages That Get Any Guy to Respond to Your Charms</span></li><p>Examples of the best kind of first text to send when you meet a new guy to inflame curiosity, stoke desire, and have guys checking their phone every 5 minutes to see when you’re going to text them next.</p>
+                                            <li class="list-item-3"><span>PLUS 8 more amazing bonuses</span>,</li><p>from scripts to in depth explanations of the male psychology behind his most frustrating texts</p>
                                         </ul>
                     </div>
                 <div class="feature__subtitle">How many times have you <strong>panicked before sending a text to a guy</strong> you like because you were afraid he’d reject you? How many
@@ -791,9 +791,6 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                         <div class="section-testimonials__item section-testimonials__item--left">
                             <strong>Real-Life Texts From Guys and Your Perfect Response, Every Time</strong>
                             <blockquote class="section-testimonials__quote">
-                                <p>In this 80 minute webinar, I walk through 7 different text exchanges.</p>
-                                <p>I analyze the responses from both sides of the exchange and provide word-for-word replies that the women could have sent instead.</p>
-                                <p>If you want to know what a guy means when he texts something like this, then you’re in for a treat!</p>
                             </blockquote>
                         </div>
                     </div>
@@ -801,9 +798,6 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                         <div class="section-testimonials__item section-testimonials__item--right">
                             <strong>7 Magic Messages That Get Any Guy to Respond to Your Charms</strong>
                             <blockquote class="section-testimonials__quote">
-                                <p>A clear breakdown of the best kind of first text to send when you meet a new guy to inflame curiosity, stoke desire, and have guys checking their phone every 5 minutes to see when you’re going to text them next.</p>
-                                <p>This isn’t about you doing all the work at the beginning of a relationship — just the opposite! Learn how to leverage your first texts to have <em>him pursuing you!</em></p>
-                                <p></p>
                             </blockquote>
                         </div>
                     </div>
@@ -822,27 +816,27 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                         <dl class="section-content__desc-list">
                             <dt><span>1.</span>BONUS: TEXTING MAGIC
                             </dt>
-                            <dd><strong>Over a dozen real-life texting-with-a-guy scenarios</strong>, that teach you how to respond in a way that sets you apart from every other woman he has ever dated.</dd>
+                            <dd class="inline-bonus-list"><strong>Over a dozen real-life texting-with-a-guy scenarios</strong>, that teach you how to respond in a way that sets you apart from every other woman he has ever dated.</dd>
                             <dt><span>2.</span> BONUS: 5 Compliments That Will Get Him Addicted to You</dt>
-                            <dd>The 5 most important – but rarely used – compliments any man needs to hear to get him addicted to you. In this handy guide, I’ll show you how to <strong>use male
+                            <dd class="inline-bonus-list">The 5 most important – but rarely used – compliments any man needs to hear to get him addicted to you. In this handy guide, I’ll show you how to <strong>use male
                                     psychology to flip his attraction switches whenever you choose</strong>.
                             </dd>
                             <dt><span>3.</span> BONUS: How to Know if He Is Worth Dating – In 5 Minutes</dt>
-                            <dd><strong>How to pre-screen your dates (so you can STOP wasting your time)</strong> by asking these 4 revealing questions on a 5-minute phone call. If he fails
+                            <dd class="inline-bonus-list"><strong>How to pre-screen your dates (so you can STOP wasting your time)</strong> by asking these 4 revealing questions on a 5-minute phone call. If he fails
                                 these questions,
                                 don’t date him! If he answers correctly, you know he’s a keeper. All in 5 minutes!
                             </dd>
                             <dt><span>4.</span> BONUS: The Most Perfect Online Dating Profile Ever</dt>
-                            <dd><strong>How to create the most perfect dating profile ever with a real world example.</strong> Line by line, I’ll show you exactly what makes this case study so
+                            <dd class="inline-bonus-list"><strong>How to create the most perfect dating profile ever with a real world example.</strong> Line by line, I’ll show you exactly what makes this case study so
                                 compelling, so you
                                 can tweak your profile for better results.
                             </dd>
                             <dt><span>5.</span> BONUS: 10 Essential Texts to Men</dt>
-                            <dd>The 10 most effective texts you can send to any man – in all kinds of situations – in this handy cheat-sheet you can keep in your wallet or purse. <strong>You’ll never
+                            <dd class="inline-bonus-list">The 10 most effective texts you can send to any man – in all kinds of situations – in this handy cheat-sheet you can keep in your wallet or purse. <strong>You’ll never
                                     be caught without something perfect to say!</strong>
                             </dd>
                             <dt><span>6.</span> BONUS: My Private Confidence- Boosting File</dt>
-                            <dd>
+                            <dd class="inline-bonus-list">
                                 <p>I have a small but precious handful of memories, quotations, and emotional triggers that instantly inspire me to get in the right state to communicate with
                                     absolutely anyone.</p>
                                 <p>I’ve <strong>unlocked my private diary</strong> to hand you my list of “emotional buttons” to <strong>inspire you to have unstoppable confidence</strong> in any
@@ -853,12 +847,12 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                     <div class="col-md-6">
                         <dl>
                             <dt><span>7.</span> BONUS: The Language of Desire</dt>
-                            <dd>The difference between love and desire and the <strong>exact “desire words” to use so your guy sees you as sexy and seductive</strong>. Use just one of these
+                            <dd class="inline-bonus-list">The difference between love and desire and the <strong>exact “desire words” to use so your guy sees you as sexy and seductive</strong>. Use just one of these
                                 phrases tonight and
                                 you’ll be shocked at the results!
                             </dd>
                             <dt><span>8.</span> BONUS: Deep Dive Communication Coaching – An Exclusive Q&A Webinar With Me</dt>
-                            <dd><p>Access to an exclusive call where I answer your most burning questions about men and communication. We talk about:</p>
+                            <dd class="inline-bonus-list"><p>Access to an exclusive call where I answer your most burning questions about men and communication. We talk about:</p>
                                 <ul class="bonus-align">
                                     <li>Speed dating and how to make a great first impression</li>
                                     <li><strong>Conversational “hacks”</strong> to deal with small talk</li>
@@ -870,14 +864,14 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                                 </ul>
                             </dd>
                             <dt><span>9.</span> 9 Real-Life Texts From Guys and Your Perfect Response, Every Time</dt>
-                            <dd>
+                            <dd class="inline-bonus-list">
                                 <p>In this 80 minute webinar, Matt and Jameson walk through 7 different text exchanges.
                                     <strong> analyze the responses from both sides of the exchange, and provide word-for-word replies that the women could have been sent instead.</strong>
                                     </p>
                                 <p>If you want to know what a guy means when he texts something like this, then you’re in for a treat!</p>
                             </dd>
                             <dt><span>10.</span> Magic Messages That Get Any Guy to Respond to Your Charms                            </dt>
-                            <dd>
+                            <dd class="inline-bonus-list">
                                 <p>This set of 7 examples of the best kind of first text to send when you meet a new guy will inflame curiosity, stoke desire, and have guys checking their phone every 5 minutes to see when  you’re going to text them next.</p>
                                 <p>This isn’t about you doing all the work at the <strong>beginning of a relationship —</strong> just the opposite! Learn how to leverage first texts to have him pursuing you</p>
                             </dd>
