--- a/vsl-rl.html
+++ b/vsl-rl.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="profile" href="http://gmpg.org/xfn/11">
-    <title>Find the Perfect Thing To Say To Men | Get the guy</title>
+    <title>Find the Perfect Thing To Say To Men | Get The Guy</title>
     <link rel="stylesheet" id="understrap-styles-css" href="css/theme.min.css" type="text/css" media="all">
     <link rel="stylesheet" id="custom-css" href="css/custom.css" type="text/css" media="all">
     <meta name="mobile-web-app-capable" content="yes">
